--- a/ivoszbg/hugo.toml
+++ b/ivoszbg/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://ivoszbg.github.io/'
+baseURL = "https://ivoszbg.github.io/"
 languageCode = 'en-us'
 title = 'Ivaylo Ivanov'
 theme = 'PaperMod'
