--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -59,7 +59,7 @@ jobs:
           cd ivoszbg && hugo \
             --gc \
             --minify \
-            --baseURL "https://ivoszbg.github.io/"          
+            --baseURL "https://ivoszbg.github.io"          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
