ivoszbg: hugo: Fulfill the portfolio page, fix some stuff
Signed-off-by: Ivaylo Ivanov <ivo.ivanov.ivanov1@gmail.com>

--- a/ivoszbg/hugo.toml
+++ b/ivoszbg/hugo.toml
@@ -3,6 +3,14 @@ languageCode = 'en-us'
 title = 'Ivaylo Ivanov'
 theme = 'PaperMod'
 
+[[module.mounts]]
+source = 'static'
+target = 'static'
+
+[[module.mounts]]
+source = 'images'
+target = 'static/images'
+
 [params]
    ShowBreadCrumbs = true
   [params.profileMode]
